# text-icu-translit

./: README.md  cabal.project  flake.nix  hie.yaml  text-icu-translit.cabal
.github/workflows/: test-flake.yml
Data/Text/ICU/: Translit.hs
Data/Text/ICU/Translit/: IO.hs  Play.hs
app/: Main.hs
test/: Main.hs
