name:               text-icu-translit
version:            0.1.0.7
synopsis:           ICU transliteration
description:
  Bindings to the transliteration features by the
  International Components for Unicode (ICU) library

license:            BSD3
license-file:       LICENSE
author:             Antonio Nikishaev
maintainer:         Antonio Nikishaev <me@lelf.lu>
copyright:          2014 Antonio Nikishaev
bug-reports:        https://github.com/llelf/text-icu-translit/issues
category:           Text
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: include/trans.h

library
  exposed-modules:
    Data.Text.ICU.Translit
    Data.Text.ICU.Translit.IO

  other-modules:      Data.Text.ICU.Translit.ICUHelper
  ghc-options:        -Wall
  c-sources:          cbits/trans.c
  include-dirs:       include
  extra-libraries:    icuuc

  if !(arch(x86_64) || arch(aarch64))
    buildable: False

  if os(windows)
    extra-libraries:
      icuin
      icudt

  else
    extra-libraries:
      icui18n
      icudata

  default-extensions:
    BlockArguments
    ViewPatterns

  build-depends:
      base        >=4   && <5
    , bytestring
    , text        >=2.0

  -- hs-source-dirs:      
  default-language:   GHC2021

test-suite text-icu-translit-test
  type:               exitcode-stdio-1.0
  default-language:   GHC2021
  hs-source-dirs:     test
  main-is:            Main.hs
  ghc-options:        -Wall
  default-extensions:
    BlockArguments
    ViewPatterns

  build-depends:
      base
    , hspec
    , QuickCheck
    , text
    , text-icu
    , text-icu-translit

source-repository head
  type:     darcs
  location: http://hub.darcs.net/lelf/text-icu-translit

source-repository head
  type:     git
  location: https://github.com/llelf/text-icu-translit
